--- a/client/config.json
+++ b/client/config.json
@@ -7,7 +7,8 @@
     { "printText": "under 16", "displayText": "Under 16", "itemType": "ticket", "buttonColor": "#06d6a0", "price": 1 },
     { "printText": "child", "displayText": "Child", "itemType": "ticket", "buttonColor": "#06d6a0", "price": 0 },
     { "printText": "u21/student", "displayText": "U21/Student", "itemType": "ticket", "buttonColor": "#62b6cb", "price": 5 },
-    { "printText": "season ticket", "displayText": "Season Ticket", "itemType": "ticket", "buttonColor": "#a4c3b2", "price": 0 }
+    { "printText": "season ticket", "displayText": "Season Ticket", "itemType": "ticket", "buttonColor": "#a4c3b2", "price": 0 },
+    { "printText": "programme", "displayText": "Programme", "itemType": "other", "buttonColor": "#beef00", "price": 2.5 }
   ],
   "alternateItems": [
     { "printText": "adult", "displayText": "Adult", "itemType": "ticket", "buttonColor": "#ff4d6d", "price": 5 },
